cmake_minimum_required(VERSION 3.28)
add_library(PodEncodeModule STATIC PodEncodeModule.cpp PodEncodeModule.h)
target_include_directories(PodEncodeModule PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(PodEncodeModule PUBLIC Mcaster1Core Qt6::Core Qt6::Gui Qt6::Widgets)
target_compile_definitions(PodEncodeModule PRIVATE MCASTER1PLUGIN_EXPORTS)
